parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    JOIN
    LPAREN
    RPAREN
    USING

Grammar

Rule 0     S' -> program
Rule 1     program -> command_list
Rule 2     command_list -> command SEMICOLON
Rule 3     command_list -> command SEMICOLON command_list
Rule 4     command -> import_cmd
Rule 5     command -> export_cmd
Rule 6     command -> discard_cmd
Rule 7     command -> rename_cmd
Rule 8     command -> print_cmd
Rule 9     command -> select_cmd
Rule 10    command -> create_cmd
Rule 11    command -> procedure_def
Rule 12    command -> procedure_call
Rule 13    import_cmd -> IMPORT TABLE ID FROM STRING
Rule 14    export_cmd -> EXPORT TABLE ID AS STRING
Rule 15    discard_cmd -> DISCARD TABLE ID
Rule 16    rename_cmd -> RENAME TABLE ID ID
Rule 17    print_cmd -> PRINT TABLE ID
Rule 18    select_cmd -> SELECT select_list FROM table_reference
Rule 19    select_cmd -> SELECT select_list FROM table_reference WHERE condition
Rule 20    select_cmd -> SELECT select_list FROM table_reference LIMIT NUMBER
Rule 21    select_cmd -> SELECT select_list FROM table_reference WHERE condition LIMIT NUMBER
Rule 22    table_reference -> ID
Rule 23    table_reference -> TABLE ID
Rule 24    select_list -> STAR
Rule 25    select_list -> ID
Rule 26    select_list -> select_list COMMA ID
Rule 27    condition -> expression
Rule 28    condition -> condition AND condition
Rule 29    expression -> ID LT NUMBER
Rule 30    expression -> ID GT NUMBER
Rule 31    expression -> ID LE NUMBER
Rule 32    expression -> ID GE NUMBER
Rule 33    expression -> ID EQ NUMBER
Rule 34    expression -> ID NE NUMBER
Rule 35    create_cmd -> CREATE TABLE ID
Rule 36    procedure_def -> PROCEDURE ID DO command_list END
Rule 37    procedure_call -> CALL ID

Terminals, with rules where they appear

AND                  : 28
AS                   : 14
CALL                 : 37
COMMA                : 26
CREATE               : 35
DISCARD              : 15
DO                   : 36
END                  : 36
EQ                   : 33
EXPORT               : 14
FROM                 : 13 18 19 20 21
GE                   : 32
GT                   : 30
ID                   : 13 14 15 16 16 17 22 23 25 26 29 30 31 32 33 34 35 36 37
IMPORT               : 13
JOIN                 : 
LE                   : 31
LIMIT                : 20 21
LPAREN               : 
LT                   : 29
NE                   : 34
NUMBER               : 20 21 29 30 31 32 33 34
PRINT                : 17
PROCEDURE            : 36
RENAME               : 16
RPAREN               : 
SELECT               : 18 19 20 21
SEMICOLON            : 2 3
STAR                 : 24
STRING               : 13 14
TABLE                : 13 14 15 16 17 23 35
USING                : 
WHERE                : 19 21
error                : 

Nonterminals, with rules where they appear

command              : 2 3
command_list         : 1 3 36
condition            : 19 21 28 28
create_cmd           : 10
discard_cmd          : 6
export_cmd           : 5
expression           : 27
import_cmd           : 4
print_cmd            : 8
procedure_call       : 12
procedure_def        : 11
program              : 0
rename_cmd           : 7
select_cmd           : 9
select_list          : 18 19 20 21 26
table_reference      : 18 19 20 21

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . command_list
    (2) command_list -> . command SEMICOLON
    (3) command_list -> . command SEMICOLON command_list
    (4) command -> . import_cmd
    (5) command -> . export_cmd
    (6) command -> . discard_cmd
    (7) command -> . rename_cmd
    (8) command -> . print_cmd
    (9) command -> . select_cmd
    (10) command -> . create_cmd
    (11) command -> . procedure_def
    (12) command -> . procedure_call
    (13) import_cmd -> . IMPORT TABLE ID FROM STRING
    (14) export_cmd -> . EXPORT TABLE ID AS STRING
    (15) discard_cmd -> . DISCARD TABLE ID
    (16) rename_cmd -> . RENAME TABLE ID ID
    (17) print_cmd -> . PRINT TABLE ID
    (18) select_cmd -> . SELECT select_list FROM table_reference
    (19) select_cmd -> . SELECT select_list FROM table_reference WHERE condition
    (20) select_cmd -> . SELECT select_list FROM table_reference LIMIT NUMBER
    (21) select_cmd -> . SELECT select_list FROM table_reference WHERE condition LIMIT NUMBER
    (35) create_cmd -> . CREATE TABLE ID
    (36) procedure_def -> . PROCEDURE ID DO command_list END
    (37) procedure_call -> . CALL ID

    IMPORT          shift and go to state 13
    EXPORT          shift and go to state 14
    DISCARD         shift and go to state 15
    RENAME          shift and go to state 16
    PRINT           shift and go to state 17
    SELECT          shift and go to state 18
    CREATE          shift and go to state 19
    PROCEDURE       shift and go to state 20
    CALL            shift and go to state 21

    program                        shift and go to state 1
    command_list                   shift and go to state 2
    command                        shift and go to state 3
    import_cmd                     shift and go to state 4
    export_cmd                     shift and go to state 5
    discard_cmd                    shift and go to state 6
    rename_cmd                     shift and go to state 7
    print_cmd                      shift and go to state 8
    select_cmd                     shift and go to state 9
    create_cmd                     shift and go to state 10
    procedure_def                  shift and go to state 11
    procedure_call                 shift and go to state 12

state 1

    (0) S' -> program .



state 2

    (1) program -> command_list .

    $end            reduce using rule 1 (program -> command_list .)


state 3

    (2) command_list -> command . SEMICOLON
    (3) command_list -> command . SEMICOLON command_list

    SEMICOLON       shift and go to state 22


state 4

    (4) command -> import_cmd .

    SEMICOLON       reduce using rule 4 (command -> import_cmd .)


state 5

    (5) command -> export_cmd .

    SEMICOLON       reduce using rule 5 (command -> export_cmd .)


state 6

    (6) command -> discard_cmd .

    SEMICOLON       reduce using rule 6 (command -> discard_cmd .)


state 7

    (7) command -> rename_cmd .

    SEMICOLON       reduce using rule 7 (command -> rename_cmd .)


state 8

    (8) command -> print_cmd .

    SEMICOLON       reduce using rule 8 (command -> print_cmd .)


state 9

    (9) command -> select_cmd .

    SEMICOLON       reduce using rule 9 (command -> select_cmd .)


state 10

    (10) command -> create_cmd .

    SEMICOLON       reduce using rule 10 (command -> create_cmd .)


state 11

    (11) command -> procedure_def .

    SEMICOLON       reduce using rule 11 (command -> procedure_def .)


state 12

    (12) command -> procedure_call .

    SEMICOLON       reduce using rule 12 (command -> procedure_call .)


state 13

    (13) import_cmd -> IMPORT . TABLE ID FROM STRING

    TABLE           shift and go to state 23


state 14

    (14) export_cmd -> EXPORT . TABLE ID AS STRING

    TABLE           shift and go to state 24


state 15

    (15) discard_cmd -> DISCARD . TABLE ID

    TABLE           shift and go to state 25


state 16

    (16) rename_cmd -> RENAME . TABLE ID ID

    TABLE           shift and go to state 26


state 17

    (17) print_cmd -> PRINT . TABLE ID

    TABLE           shift and go to state 27


state 18

    (18) select_cmd -> SELECT . select_list FROM table_reference
    (19) select_cmd -> SELECT . select_list FROM table_reference WHERE condition
    (20) select_cmd -> SELECT . select_list FROM table_reference LIMIT NUMBER
    (21) select_cmd -> SELECT . select_list FROM table_reference WHERE condition LIMIT NUMBER
    (24) select_list -> . STAR
    (25) select_list -> . ID
    (26) select_list -> . select_list COMMA ID

    STAR            shift and go to state 29
    ID              shift and go to state 30

    select_list                    shift and go to state 28

state 19

    (35) create_cmd -> CREATE . TABLE ID

    TABLE           shift and go to state 31


state 20

    (36) procedure_def -> PROCEDURE . ID DO command_list END

    ID              shift and go to state 32


state 21

    (37) procedure_call -> CALL . ID

    ID              shift and go to state 33


state 22

    (2) command_list -> command SEMICOLON .
    (3) command_list -> command SEMICOLON . command_list
    (2) command_list -> . command SEMICOLON
    (3) command_list -> . command SEMICOLON command_list
    (4) command -> . import_cmd
    (5) command -> . export_cmd
    (6) command -> . discard_cmd
    (7) command -> . rename_cmd
    (8) command -> . print_cmd
    (9) command -> . select_cmd
    (10) command -> . create_cmd
    (11) command -> . procedure_def
    (12) command -> . procedure_call
    (13) import_cmd -> . IMPORT TABLE ID FROM STRING
    (14) export_cmd -> . EXPORT TABLE ID AS STRING
    (15) discard_cmd -> . DISCARD TABLE ID
    (16) rename_cmd -> . RENAME TABLE ID ID
    (17) print_cmd -> . PRINT TABLE ID
    (18) select_cmd -> . SELECT select_list FROM table_reference
    (19) select_cmd -> . SELECT select_list FROM table_reference WHERE condition
    (20) select_cmd -> . SELECT select_list FROM table_reference LIMIT NUMBER
    (21) select_cmd -> . SELECT select_list FROM table_reference WHERE condition LIMIT NUMBER
    (35) create_cmd -> . CREATE TABLE ID
    (36) procedure_def -> . PROCEDURE ID DO command_list END
    (37) procedure_call -> . CALL ID

    $end            reduce using rule 2 (command_list -> command SEMICOLON .)
    END             reduce using rule 2 (command_list -> command SEMICOLON .)
    IMPORT          shift and go to state 13
    EXPORT          shift and go to state 14
    DISCARD         shift and go to state 15
    RENAME          shift and go to state 16
    PRINT           shift and go to state 17
    SELECT          shift and go to state 18
    CREATE          shift and go to state 19
    PROCEDURE       shift and go to state 20
    CALL            shift and go to state 21

    command                        shift and go to state 3
    command_list                   shift and go to state 34
    import_cmd                     shift and go to state 4
    export_cmd                     shift and go to state 5
    discard_cmd                    shift and go to state 6
    rename_cmd                     shift and go to state 7
    print_cmd                      shift and go to state 8
    select_cmd                     shift and go to state 9
    create_cmd                     shift and go to state 10
    procedure_def                  shift and go to state 11
    procedure_call                 shift and go to state 12

state 23

    (13) import_cmd -> IMPORT TABLE . ID FROM STRING

    ID              shift and go to state 35


state 24

    (14) export_cmd -> EXPORT TABLE . ID AS STRING

    ID              shift and go to state 36


state 25

    (15) discard_cmd -> DISCARD TABLE . ID

    ID              shift and go to state 37


state 26

    (16) rename_cmd -> RENAME TABLE . ID ID

    ID              shift and go to state 38


state 27

    (17) print_cmd -> PRINT TABLE . ID

    ID              shift and go to state 39


state 28

    (18) select_cmd -> SELECT select_list . FROM table_reference
    (19) select_cmd -> SELECT select_list . FROM table_reference WHERE condition
    (20) select_cmd -> SELECT select_list . FROM table_reference LIMIT NUMBER
    (21) select_cmd -> SELECT select_list . FROM table_reference WHERE condition LIMIT NUMBER
    (26) select_list -> select_list . COMMA ID

    FROM            shift and go to state 40
    COMMA           shift and go to state 41


state 29

    (24) select_list -> STAR .

    FROM            reduce using rule 24 (select_list -> STAR .)
    COMMA           reduce using rule 24 (select_list -> STAR .)


state 30

    (25) select_list -> ID .

    FROM            reduce using rule 25 (select_list -> ID .)
    COMMA           reduce using rule 25 (select_list -> ID .)


state 31

    (35) create_cmd -> CREATE TABLE . ID

    ID              shift and go to state 42


state 32

    (36) procedure_def -> PROCEDURE ID . DO command_list END

    DO              shift and go to state 43


state 33

    (37) procedure_call -> CALL ID .

    SEMICOLON       reduce using rule 37 (procedure_call -> CALL ID .)


state 34

    (3) command_list -> command SEMICOLON command_list .

    $end            reduce using rule 3 (command_list -> command SEMICOLON command_list .)
    END             reduce using rule 3 (command_list -> command SEMICOLON command_list .)


state 35

    (13) import_cmd -> IMPORT TABLE ID . FROM STRING

    FROM            shift and go to state 44


state 36

    (14) export_cmd -> EXPORT TABLE ID . AS STRING

    AS              shift and go to state 45


state 37

    (15) discard_cmd -> DISCARD TABLE ID .

    SEMICOLON       reduce using rule 15 (discard_cmd -> DISCARD TABLE ID .)


state 38

    (16) rename_cmd -> RENAME TABLE ID . ID

    ID              shift and go to state 46


state 39

    (17) print_cmd -> PRINT TABLE ID .

    SEMICOLON       reduce using rule 17 (print_cmd -> PRINT TABLE ID .)


state 40

    (18) select_cmd -> SELECT select_list FROM . table_reference
    (19) select_cmd -> SELECT select_list FROM . table_reference WHERE condition
    (20) select_cmd -> SELECT select_list FROM . table_reference LIMIT NUMBER
    (21) select_cmd -> SELECT select_list FROM . table_reference WHERE condition LIMIT NUMBER
    (22) table_reference -> . ID
    (23) table_reference -> . TABLE ID

    ID              shift and go to state 48
    TABLE           shift and go to state 49

    table_reference                shift and go to state 47

state 41

    (26) select_list -> select_list COMMA . ID

    ID              shift and go to state 50


state 42

    (35) create_cmd -> CREATE TABLE ID .

    SEMICOLON       reduce using rule 35 (create_cmd -> CREATE TABLE ID .)


state 43

    (36) procedure_def -> PROCEDURE ID DO . command_list END
    (2) command_list -> . command SEMICOLON
    (3) command_list -> . command SEMICOLON command_list
    (4) command -> . import_cmd
    (5) command -> . export_cmd
    (6) command -> . discard_cmd
    (7) command -> . rename_cmd
    (8) command -> . print_cmd
    (9) command -> . select_cmd
    (10) command -> . create_cmd
    (11) command -> . procedure_def
    (12) command -> . procedure_call
    (13) import_cmd -> . IMPORT TABLE ID FROM STRING
    (14) export_cmd -> . EXPORT TABLE ID AS STRING
    (15) discard_cmd -> . DISCARD TABLE ID
    (16) rename_cmd -> . RENAME TABLE ID ID
    (17) print_cmd -> . PRINT TABLE ID
    (18) select_cmd -> . SELECT select_list FROM table_reference
    (19) select_cmd -> . SELECT select_list FROM table_reference WHERE condition
    (20) select_cmd -> . SELECT select_list FROM table_reference LIMIT NUMBER
    (21) select_cmd -> . SELECT select_list FROM table_reference WHERE condition LIMIT NUMBER
    (35) create_cmd -> . CREATE TABLE ID
    (36) procedure_def -> . PROCEDURE ID DO command_list END
    (37) procedure_call -> . CALL ID

    IMPORT          shift and go to state 13
    EXPORT          shift and go to state 14
    DISCARD         shift and go to state 15
    RENAME          shift and go to state 16
    PRINT           shift and go to state 17
    SELECT          shift and go to state 18
    CREATE          shift and go to state 19
    PROCEDURE       shift and go to state 20
    CALL            shift and go to state 21

    command_list                   shift and go to state 51
    command                        shift and go to state 3
    import_cmd                     shift and go to state 4
    export_cmd                     shift and go to state 5
    discard_cmd                    shift and go to state 6
    rename_cmd                     shift and go to state 7
    print_cmd                      shift and go to state 8
    select_cmd                     shift and go to state 9
    create_cmd                     shift and go to state 10
    procedure_def                  shift and go to state 11
    procedure_call                 shift and go to state 12

state 44

    (13) import_cmd -> IMPORT TABLE ID FROM . STRING

    STRING          shift and go to state 52


state 45

    (14) export_cmd -> EXPORT TABLE ID AS . STRING

    STRING          shift and go to state 53


state 46

    (16) rename_cmd -> RENAME TABLE ID ID .

    SEMICOLON       reduce using rule 16 (rename_cmd -> RENAME TABLE ID ID .)


state 47

    (18) select_cmd -> SELECT select_list FROM table_reference .
    (19) select_cmd -> SELECT select_list FROM table_reference . WHERE condition
    (20) select_cmd -> SELECT select_list FROM table_reference . LIMIT NUMBER
    (21) select_cmd -> SELECT select_list FROM table_reference . WHERE condition LIMIT NUMBER

    SEMICOLON       reduce using rule 18 (select_cmd -> SELECT select_list FROM table_reference .)
    WHERE           shift and go to state 54
    LIMIT           shift and go to state 55


state 48

    (22) table_reference -> ID .

    WHERE           reduce using rule 22 (table_reference -> ID .)
    LIMIT           reduce using rule 22 (table_reference -> ID .)
    SEMICOLON       reduce using rule 22 (table_reference -> ID .)


state 49

    (23) table_reference -> TABLE . ID

    ID              shift and go to state 56


state 50

    (26) select_list -> select_list COMMA ID .

    FROM            reduce using rule 26 (select_list -> select_list COMMA ID .)
    COMMA           reduce using rule 26 (select_list -> select_list COMMA ID .)


state 51

    (36) procedure_def -> PROCEDURE ID DO command_list . END

    END             shift and go to state 57


state 52

    (13) import_cmd -> IMPORT TABLE ID FROM STRING .

    SEMICOLON       reduce using rule 13 (import_cmd -> IMPORT TABLE ID FROM STRING .)


state 53

    (14) export_cmd -> EXPORT TABLE ID AS STRING .

    SEMICOLON       reduce using rule 14 (export_cmd -> EXPORT TABLE ID AS STRING .)


state 54

    (19) select_cmd -> SELECT select_list FROM table_reference WHERE . condition
    (21) select_cmd -> SELECT select_list FROM table_reference WHERE . condition LIMIT NUMBER
    (27) condition -> . expression
    (28) condition -> . condition AND condition
    (29) expression -> . ID LT NUMBER
    (30) expression -> . ID GT NUMBER
    (31) expression -> . ID LE NUMBER
    (32) expression -> . ID GE NUMBER
    (33) expression -> . ID EQ NUMBER
    (34) expression -> . ID NE NUMBER

    ID              shift and go to state 60

    condition                      shift and go to state 58
    expression                     shift and go to state 59

state 55

    (20) select_cmd -> SELECT select_list FROM table_reference LIMIT . NUMBER

    NUMBER          shift and go to state 61


state 56

    (23) table_reference -> TABLE ID .

    WHERE           reduce using rule 23 (table_reference -> TABLE ID .)
    LIMIT           reduce using rule 23 (table_reference -> TABLE ID .)
    SEMICOLON       reduce using rule 23 (table_reference -> TABLE ID .)


state 57

    (36) procedure_def -> PROCEDURE ID DO command_list END .

    SEMICOLON       reduce using rule 36 (procedure_def -> PROCEDURE ID DO command_list END .)


state 58

    (19) select_cmd -> SELECT select_list FROM table_reference WHERE condition .
    (21) select_cmd -> SELECT select_list FROM table_reference WHERE condition . LIMIT NUMBER
    (28) condition -> condition . AND condition

    SEMICOLON       reduce using rule 19 (select_cmd -> SELECT select_list FROM table_reference WHERE condition .)
    LIMIT           shift and go to state 62
    AND             shift and go to state 63


state 59

    (27) condition -> expression .

    LIMIT           reduce using rule 27 (condition -> expression .)
    AND             reduce using rule 27 (condition -> expression .)
    SEMICOLON       reduce using rule 27 (condition -> expression .)


state 60

    (29) expression -> ID . LT NUMBER
    (30) expression -> ID . GT NUMBER
    (31) expression -> ID . LE NUMBER
    (32) expression -> ID . GE NUMBER
    (33) expression -> ID . EQ NUMBER
    (34) expression -> ID . NE NUMBER

    LT              shift and go to state 64
    GT              shift and go to state 65
    LE              shift and go to state 66
    GE              shift and go to state 67
    EQ              shift and go to state 68
    NE              shift and go to state 69


state 61

    (20) select_cmd -> SELECT select_list FROM table_reference LIMIT NUMBER .

    SEMICOLON       reduce using rule 20 (select_cmd -> SELECT select_list FROM table_reference LIMIT NUMBER .)


state 62

    (21) select_cmd -> SELECT select_list FROM table_reference WHERE condition LIMIT . NUMBER

    NUMBER          shift and go to state 70


state 63

    (28) condition -> condition AND . condition
    (27) condition -> . expression
    (28) condition -> . condition AND condition
    (29) expression -> . ID LT NUMBER
    (30) expression -> . ID GT NUMBER
    (31) expression -> . ID LE NUMBER
    (32) expression -> . ID GE NUMBER
    (33) expression -> . ID EQ NUMBER
    (34) expression -> . ID NE NUMBER

    ID              shift and go to state 60

    condition                      shift and go to state 71
    expression                     shift and go to state 59

state 64

    (29) expression -> ID LT . NUMBER

    NUMBER          shift and go to state 72


state 65

    (30) expression -> ID GT . NUMBER

    NUMBER          shift and go to state 73


state 66

    (31) expression -> ID LE . NUMBER

    NUMBER          shift and go to state 74


state 67

    (32) expression -> ID GE . NUMBER

    NUMBER          shift and go to state 75


state 68

    (33) expression -> ID EQ . NUMBER

    NUMBER          shift and go to state 76


state 69

    (34) expression -> ID NE . NUMBER

    NUMBER          shift and go to state 77


state 70

    (21) select_cmd -> SELECT select_list FROM table_reference WHERE condition LIMIT NUMBER .

    SEMICOLON       reduce using rule 21 (select_cmd -> SELECT select_list FROM table_reference WHERE condition LIMIT NUMBER .)


state 71

    (28) condition -> condition AND condition .
    (28) condition -> condition . AND condition

    LIMIT           reduce using rule 28 (condition -> condition AND condition .)
    AND             reduce using rule 28 (condition -> condition AND condition .)
    SEMICOLON       reduce using rule 28 (condition -> condition AND condition .)

  ! AND             [ shift and go to state 63 ]


state 72

    (29) expression -> ID LT NUMBER .

    LIMIT           reduce using rule 29 (expression -> ID LT NUMBER .)
    AND             reduce using rule 29 (expression -> ID LT NUMBER .)
    SEMICOLON       reduce using rule 29 (expression -> ID LT NUMBER .)


state 73

    (30) expression -> ID GT NUMBER .

    LIMIT           reduce using rule 30 (expression -> ID GT NUMBER .)
    AND             reduce using rule 30 (expression -> ID GT NUMBER .)
    SEMICOLON       reduce using rule 30 (expression -> ID GT NUMBER .)


state 74

    (31) expression -> ID LE NUMBER .

    LIMIT           reduce using rule 31 (expression -> ID LE NUMBER .)
    AND             reduce using rule 31 (expression -> ID LE NUMBER .)
    SEMICOLON       reduce using rule 31 (expression -> ID LE NUMBER .)


state 75

    (32) expression -> ID GE NUMBER .

    LIMIT           reduce using rule 32 (expression -> ID GE NUMBER .)
    AND             reduce using rule 32 (expression -> ID GE NUMBER .)
    SEMICOLON       reduce using rule 32 (expression -> ID GE NUMBER .)


state 76

    (33) expression -> ID EQ NUMBER .

    LIMIT           reduce using rule 33 (expression -> ID EQ NUMBER .)
    AND             reduce using rule 33 (expression -> ID EQ NUMBER .)
    SEMICOLON       reduce using rule 33 (expression -> ID EQ NUMBER .)


state 77

    (34) expression -> ID NE NUMBER .

    LIMIT           reduce using rule 34 (expression -> ID NE NUMBER .)
    AND             reduce using rule 34 (expression -> ID NE NUMBER .)
    SEMICOLON       reduce using rule 34 (expression -> ID NE NUMBER .)

